--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="links">
                 <a href="https://www.linkedin.com/in/bryanlwong/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/bdotwong" target="_blank">GitHub</a>
-                <a href="https://www.printables.com/@wong_bryan_920503" target="_blank">Printables</a>
+                <a href="https://www.printables.com/@bdotwong_920503" target="_blank">Printables</a>
             </div>
         </aside>
         <div class="main-content">
